+ login + signup + basic template

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "core-js": "^3.32.0",
@@ -25,7 +26,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "regenerator-runtime": "^0.14.0",
-    "style-loader": "^1.0.0"
+    "style-loader": "^1.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
